update v3.0.0
